# confusion2vec_2.0

./: CMakeLists.txt  Makefile  README.md  c2v_fasttext.pc.in
data/: example_sausage.txt
data/evaluation_data/analogy_tasks/: homophone_analogy.txt
data/evaluation_data/similarity_tasks/: homophone_ratings.txt
scripts/: concat.sh  convert_sausage.py
src/: args.cc  args.h  autotune.cc  autotune.h  c2v_fasttext.cc  c2v_fasttext.h  densematrix.cc  densematrix.h  dictionary.cc  dictionary.h  fasttext.cc  fasttext.h  loss.cc  loss.h  main.cc  matrix.cc  matrix.h  meter.cc  meter.h  model.cc  model.h  productquantizer.cc  productquantizer.h  quantmatrix.cc  quantmatrix.h  real.h  utils.cc  utils.h  vector.cc  vector.h
